<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Universiades</string>

    <string name="tab_home">Main</string>
    <string name="tab_news">News</string>
    <string name="tab_lost_found">Lost and found</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="language">Language</string>

    <string name="locale_image_path">usa.png</string>

    <string name="ru">RU</string>
    <string name="en">EN</string>
    <string name="de">DE</string>


    <string name="medals_country_name">Country name</string>

    <string name="title">Title</string>
    <string name="news_created_on">Publication time</string>
    <string name="medals_table">Medals Table</string>
    <string name="home_country_title">Host country</string>

    <string name="events_men">Men</string>
    <string name="events_women">Women</string>
    <string name="events_mixed">Mixed</string>

    <string name="events_individual">Individual</string>
    <string name="events_team">Team</string>

    <string name="discipline">Discipline</string>
    <string name="category">Category</string>
    <string name="stage">Stage</string>
    <string name="time">Time</string>
    <string name="ended">Ended</string>

    <string name="schedule">Schedule</string>

    <string name="you_chose">You chose </string>

    <string name="lostfound_describe_item">Describe the item</string>
    <string name="lostfound_hint_describe_item">For example: lost a brown bag, two pockets on the side</string>
    <string name="lostfound_describe_place">Describe the approximate location of the loss</string>
    <string name="lostfound_hint_describe_place">For example: on the 3rd row at the entrance, Yekaterinburg-Arena</string>
    <string name="lostfound_city">City</string>
    <string name="lostfound_hint_city">For example: Yekaterinburg</string>
    <string name="lostfound_your_name">How can we call you</string>
    <string name="lostfound_hint_your_name">For example: Alexander</string>
    <string name="lostfound_your_contacts">Your contacts</string>
    <string name="lostfound_hint_your_contacts">For example: Phone +7–912–333–33–33, Mail: diplom@mail.ru</string>
    <string name="choose_the_image">Choose the image</string>
    <string name="lostfound_send_request">Submit</string>

    <string name="lostfound_success">Request submitted</string>

    <string name="lostfound_bad">Not all fields are filled!</string>
    <string name="lostfound_bad_fill_data">Enter data!</string>
    <string name="lostfound_choose_the_image_button">Choose the image</string>


    <string name="events_details_results">Results</string>

    <string name="events_details_participant">Participant</string>
    <string name="events_details_country">Country</string>
    <string name="events_details_university">University</string>
    <string name="events_details_result">Result</string>

    <string name="venues_details_title">Venue</string>

    <!-- Strings related to login -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Sign in</string>
    <string name="login_welcome">Welcome!</string>
    <string name="login_error">Check entered information</string>

    <string name="volunteers_schedule">My Schedule</string>
    <string name="extra_info">Extra information</string>

    <string name="admin_lostfound_title">Admin lost found</string>
    <string name="admin_lostfound_button_find_items">Find items</string>

    <string name="event_details_Discipline">Discipline</string>
    <string name="event_details_gender">Gender</string>
    <string name="event_details_type">Type</string>
    <string name="event_details_stage">Stage</string>
    <string name="event_details_stadium">Stadium</string>

</resources>