<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.LoginActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/login_background">

<EditText
        android:id="@+id/login_username"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/login_username"
        android:selectAllOnFocus="true"

        style="@style/great_bold_text_style"/>

<EditText
        android:id="@+id/login_password"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/login_password"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"

        style="@style/great_bold_text_style"/>

<Button
        android:id="@+id/login_button"
        android:layout_margin="10dp"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:selectAllOnFocus="true"
        android:textSize="16sp"
        android:text="@string/login_button"
        android:backgroundTint="@color/teal_700"
        />

</LinearLayout>