<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MedalsActivity"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/beige">

        <TextView
                android:id="@+id/events_sport_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                style="@style/great_bold_text_style" />

        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

        <ImageView
                android:id="@+id/events_sport_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />


    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/beige">

        <TextView
                android:text="@string/discipline"
                android:layout_weight="3"
                style="@style/great_bold_small_text_style" />

        <TextView
                android:text="@string/category"
                android:layout_weight="3.2"
                style="@style/great_bold_small_text_style" />

        <TextView
                android:text="@string/stage"
                android:layout_weight="2.6"
                style="@style/great_bold_small_text_style" />

        <TextView
                android:text="@string/time"
                android:layout_weight="2.6"
                style="@style/great_bold_small_text_style" />

        <ImageView
                android:src="@drawable/events_finished"
                android:text="@string/ended"
                android:layout_weight="1"
                style="@style/great_bold_small_text_style" />
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/events_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ListView
                android:id="@+id/events_dto_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>