<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.users.volunteers.VolunteerScheduleFragment"
        android:background="@color/light_gray"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/beige">

        <TextView
                android:text="@string/time"
                android:layout_weight="3"
                style="@style/great_text_style"
                android:textStyle="bold" />

        <TextView
                android:text="@string/venues_details_title"
                android:layout_weight="4"
                style="@style/great_text_style"
                android:textStyle="bold" />

        <TextView
                android:text="@string/extra_info"
                android:layout_weight="5"
                style="@style/great_text_style"
                android:textStyle="bold" />

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

    <ListView
            android:id="@+id/volunteers_schedule_dto_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>